# compliments_bot

./: .gitignore  bot.db  pyproject.toml
aiosqlitedatabase/: database.py
bot/: admin.py  keyboards.py  main.py
bot/compliments/: compliments.txt  send_compliment.py
bot/handler/: handler_commands.py  handler_messages.py
parcing/: parcing.py
