[tool.poetry]
name = "ml-project"
version = "0.1.0"
description = "A simple Telegram bot"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24"
pandas = "^2.2.2"
scikit-learn = "^1.2"
aiogram = "^3.10.0"
aiosqlite = "^0.20.0"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"